--- a/NanopubCmdlets/NanopubCmdlets.csproj
+++ b/NanopubCmdlets/NanopubCmdlets.csproj
@@ -48,12 +48,18 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConvertNpDocument.cs" />
+    <Compile Include="ConvertNbDocument.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="wdNanobook.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assemblies\DocumentFormat.OpenXml.dll" />
     <Content Include="Assemblies\System.Management.Automation.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="NB_PS1003_Azure.docx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
